--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <div class="container">
         <p>Эта страница была автоматически развёрнута с помощью CI/CD.</p>
         <p>Время последнего обновления: <span id="timestamp"></span></p>
+        <p>Хули смотришь*?</p>
     </div>
     
     <script>
